deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage1
    type: frontend
  name: webpage1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webpage1
      type: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webpage1
        type: frontend
    spec:
      nodeSelector:
         topology.kubernetes.io/zone: ap-south-1a
      containers:
      - image: docker.io/mohitgupta10/webpage1:v1
        name: webpage1
        ports:
          - containerPort: 80
