deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2
    type: frontend
  name: webpage2
spec:
  replicas: 3
  selector:
    matchLabels:
      type: frontend
      app: webpage2
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webpage2
        type: frontend
    spec:
      nodeSelector:
         topology.kubernetes.io/zone: ap-south-1b
      containers:
      - image: docker.io/mohitgupta10/webpage2:v1
        name: webpage2
        ports:
          - containerPort: 80
