service.yml
apiVersion: v1
kind: Service
metadata:
  name: webpage-service
  labels:
     type: frontend
spec:
  selector:
    type: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
  type: NodePort
