ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mywebpages.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webpage-service
            port:
              number: 80
